tester/tests/compile-pass/application-function.srv
application App
    fn func(s: String) -> String
        s
    end
end
