tester/tests/compile-fail/invalid_application_function.srv

application App

    not_a_function()

end
